# FitnessPRFS

./: README.md
backend/: .gitignore  INSTRUCTIONS.md  LOGGING.md  README.md  debug_goals.py  debug_refresh.py  pyproject.toml  requirements.txt  script.py  seed_notification_templates.py  start_dev.py  test_api.py  test_api_logging.py  test_failures_analysis.md  test_logging.py  test_requests.py
backend/app/: main.py  session.py
backend/app/api/: deps.py  routes.py
backend/app/config/: config.py  logging.yaml  logging_config.py
backend/app/models/: __init__.py  attachment.py  cancellation.py  client.py  exercise.py  group_session.py  meal_plan.py  notification.py  payment.py  program.py  progress_log.py  recipe.py  refresh_token.py  session_booking.py  trainer.py  user.py
backend/app/schemas/: auth.py  client.py  exercise.py  meal_plan.py  notification.py  program.py  progress_log.py  session_booking.py  trainer.py  user.py
backend/app/services/: auth_service.py  client_service.py  exercise_service.py  group_session_service.py  meal_plan_service.py  notification_service.py  program_service.py  progress_log_service.py  session_booking_service.py  session_cancellation_service.py  trainer_service.py  user_service.py
backend/app/utils/: api_logging.py  logging_utils.py
backend/tests/: conftest.py  test_endpoints_discovery.py  test_final_verification.py  test_main.py
backend/tests/api/: test_additional_endpoints.py  test_auth.py  test_clients.py  test_exercises.py  test_meals.py  test_notifications.py  test_programs.py  test_progress.py  test_sessions.py  test_trainers.py  test_users.py
backend/tests/services/: test_auth_service.py  test_client_service.py  test_exercise_service.py  (+5 more)
(+58 files in other folders)
